<resources>
    <string name="app_name">Pick the Bus</string>
    <string name="title_activity_maps">Pick the Bus</string>
    <string name="title_activity_name">Pick the Bus</string>
    <string name="gps_network_not_enabled">GPS Network Not Enabled</string>
    <string name="open_location_settings">Open Location Settings</string>
    <string name="Cancel">Cancel</string>
    <string name="buttonService">Service</string>
    <string name="buttonPassenger">Passenger</string>
    <string name="registerButton">Register</string>
    <string name="btnDone">Login</string>
    <string name="etID">Enter ID</string>
    <string name="passengerHint">Your Location is Displayed as a Blue Dot on the Map When You Have GPS.</string>
    <string name="about">about</string>
    <string name="busnametxt">Kandy Pettah</string>
    <string name="busroutetxt">1</string>
    <string name="busdesctxt">(Optional)</string>
    <string name="regbusbtn">Register Bus</string>
    <string name="textView8">Register Your Bus as a Service :</string>
    <string name="developedby">Developed By : \n Samintha Kaveesh\n Ayodya Wijesinghe\n Chulan Kotudurage\n Namal Sirikumara\n Priyashan Madusanka\n Yashod Sulakshana\n Themiya Lakruwan\n Kalana Wijesekara</string>
    <string name="version">Version 1.0.0</string>
    <string name="appname">Pick the Bus</string>
    <string name="copyright">All Right Reserved © 2016 Clay Team</string>
    <string name="mainimageresource">main image of application</string>
    <string name="logintext">Login</string>
    <string name="notregisteredtext">Not Registered Yet? Register Now..!</string>
    <string name="busdesctextview">Bus Destinations</string>
    <string name="busroutetextview">Bus Route</string>
    <string name="busdescripttextview">Description</string>
</resources>
