<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.clay.pickthebus.pickthebus.RegisterActivity"
    android:orientation="vertical"
    android:background="@drawable/texturerepeat">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/busdesctextview"
        android:id="@+id/textView5"
        android:layout_above="@+id/busroutetxt"
        android:layout_toLeftOf="@+id/regbusbtn"
        android:layout_toStartOf="@+id/regbusbtn"
        android:textColor="#e1e1e1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/busroutetextview"
        android:id="@+id/textView6"
        android:layout_alignBottom="@+id/busroutetxt"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#e1e1e1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/busdescripttextview"
        android:id="@+id/textView7"
        android:autoLink="none"
        android:layout_alignTop="@+id/busdesctxt"
        android:layout_alignLeft="@+id/textView6"
        android:layout_alignStart="@+id/textView6"
        android:layout_marginTop="60dp"
        android:textColor="#e1e1e1" />

    <EditText
        android:layout_height="wrap_content"
        android:id="@+id/busnametxt"
        android:layout_width="200dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="34dp"
        android:layout_alignLeft="@+id/busroutetxt"
        android:layout_alignStart="@+id/busroutetxt"
        android:hint="@string/busnametxt"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "
        android:textColor="#e1e1e1"
        android:textColorHint="#818080"
        android:foregroundTintMode="screen"
        android:backgroundTint="#e1e1e1" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/busroutetxt"
        android:layout_below="@+id/busnametxt"
        android:layout_alignLeft="@+id/busdesctxt"
        android:layout_alignStart="@+id/busdesctxt"
        android:hint="@string/busroutetxt"
        android:digits="123456789/"
        android:textColor="#e1e1e1"
        android:textColorHint="#818080"
        android:visibility="visible"
        android:foregroundTintMode="screen"
        android:backgroundTint="#e1e1e1" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/busdesctxt"
        android:height="150dp"
        android:paddingBottom="15dp"
        android:layout_below="@+id/busroutetxt"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/busdesctxt"
        android:textColor="#e1e1e1"
        android:textColorHint="#818080"
        android:foregroundTintMode="screen"
        android:backgroundTint="#e1e1e1" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/regbusbtn"
        android:id="@+id/regbusbtn"
        android:layout_below="@+id/busdesctxt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:backgroundTint="#fffde3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textView8"
        android:id="@+id/textView8"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/textView6"
        android:layout_alignStart="@+id/textView6"
        android:textColor="#e1e1e1" />
</RelativeLayout>
